fix issue with long alert banner text spilling out of container

--- a/apps/site/web/static/css/core.scss
+++ b/apps/site/web/static/css/core.scss
@@ -91,7 +91,6 @@ body {
 .announcement-container {
   background-color: $gray-lightest;
   color: $gray-dark;
-  margin-bottom: -$footer-padding-top;
   padding-bottom: $base-spacing-sm;
   padding-top: $base-spacing-sm;
 
